# fermatrica

./: .coverage  .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.gitlab/issue_templates/: bug_template.md
docs/: index.MD
docs/_layouts/: default.html
docs/api/: fermatrica.html  index.html  search.js
docs/api/fermatrica/: basics.html  evaluation.html  model.html  optim.html
docs/api/fermatrica/basics/: basics.html
docs/api/fermatrica/evaluation/: metrics.html  scoring.html
docs/api/fermatrica/model/: lhs_fun.html  model.html  model_conf.html  model_obj.html  predict.html  transform.html  transform_fun.html
docs/guides/: FERMATRICA_and_MMM_instruction.md  create_docs.MD
fermatrica/: __init__.py
fermatrica/basics/: __init__.py  basics.py
fermatrica/evaluation/: __init__.py  metrics.py  scoring.py
fermatrica/model/: __init__.py  lhs_fun.py  model.py  model_conf.py  model_obj.py  predict.py  transform.py  transform_fun.py
fermatrica/optim/: __init__.py  globals.py  globals_deap.py  locals.py  objective.py  optim.py  pygad.py
samples/p00_sample/: __init__.py
samples/p00_sample/code_py/: __init__.py
tests/: conftest.py
tests/basics/: basics.py
tests/test_evaluation/: test_metrics.py  test_scoring.py
tests/test_integration/: README.md  conftest.py  test_p00_sample_integration.py  test_p00_sample_save_load.py
tests/test_integration/test_cases/: integration_p00_sample.yaml
tests/test_model/: test_lhs_fun.py  test_model_conf.py  test_transform.py  test_transform_fun.py
(+97 files in other folders)
